# remote-trait-object

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
basesandbox/: Cargo.toml
basesandbox/src/: ipc.rs  lib.rs
basesandbox/src/execution/: executee.rs  executor.rs
basesandbox/src/ipc/: intra.rs  multiplex.rs  unix_socket.rs
basesandbox/tests/: intergration_test.rs
basesandbox/tests/simple/: simple.rs
remote-trait-object/: Cargo.toml  README.md
remote-trait-object-macro/: Cargo.toml  README.md
remote-trait-object-macro/src/: helper.rs  lib.rs  service.rs
remote-trait-object-macro/src/helper/: dispatcher.rs  export_import.rs  id.rs  remote.rs  types.rs
remote-trait-object-macro/src/service/: dispatcher.rs  from_skeleton.rs  id.rs  proxy.rs  remote.rs
remote-trait-object-tests/: Cargo.toml
remote-trait-object-tests/benches/: bench1.rs
remote-trait-object-tests/src/: connection.rs  ipc.rs  lib.rs  ping.rs  simple.rs  test_concurrent_ping.rs  test_module.rs  test_ping.rs  test_store.rs  transport.rs
remote-trait-object-tests/src/mod_main/: context.rs  impls.rs  mod.rs  traits.rs
remote-trait-object-tests/src/mod_ping/: impls.rs  mod.rs  requester.rs  traits.rs
remote-trait-object-tests/src/test_module/: control_loop.rs
remote-trait-object-tests/src/test_ping/mod_main/: context.rs  impls.rs  mod.rs  traits.rs
remote-trait-object-tests/src/test_ping/mod_ping/: impls.rs  mod.rs  traits.rs
remote-trait-object-tests/src/test_store/: man.rs  store.rs  types.rs
remote-trait-object/src/: context.rs  forwarder.rs  ipc.rs  lib.rs  packet.rs  port.rs  queue.rs  service.rs  tests.rs  transport.rs
remote-trait-object/src/ipc/: multiplex.rs
remote-trait-object/src/port/: client.rs  server.rs  types.rs
remote-trait-object/src/service/: export_import.rs  handle.rs  id.rs  null.rs  remote.rs  serde_support.rs
remote-trait-object/src/tests/: complex_trait.rs
remote-trait-object/src/transport/: multiplex.rs
