[package]
name = "codechain-basesandbox"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
crossbeam = "0.7.3"
log = "0.4.8"
once_cell = "1.3.1"
parking_lot = "0.6.0"
remote-trait-object = { path = "../remote-trait-object" }
serde_cbor = "0.11.1"
