[package]
name = "remote-trait-object-macro"
version = "0.1.2"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0"
syn = { version = "1.0.16", features = ["full", "extra-traits", "visit", "fold"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0.23"

[lib]
proc-macro = true