[package]
name = "remote-trait-object-tests"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-basesandbox = { path = "../basesandbox" }
crossbeam = "0.7.3"
env_logger = "0.7.1"
hex = "0.4.2"
log = "0.4.8"
once_cell = "1.3.1"
remote-trait-object = {path = "../remote-trait-object"}
remote-trait-object-macro = { path = "../remote-trait-object-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
linkme = "0.2.1"

[[bin]]
path = "./bin/mod_main.rs"
name = "test_mod_main_rs"

[[bin]]
path = "./bin/mod_ping.rs"
name = "test_mod_ping_rs"
