[package]
name = "remote-trait-object-tests"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
env_logger = "0.7.1"
hex = "0.4.2"
log = "0.4.8"
once_cell = "1.3.1"
remote-trait-object = { version = "0.4.3", path = "../remote-trait-object"}
serde = { version = "1.0", features = ["derive"] }
linkme = "0.2.1"
parking_lot = "0.11.0"
bincode = "1.3.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench1"
harness = false
