[package]
name = "remote-trait-object"
version = "0.1.2"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
log = "0.4.8"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
linkme = "0.2.1"

[dev-dependencies]
env_logger = "0.7.1"
remote-trait-object-macro = { path = "../remote-trait-object-macro", version = "0.1.1"}
