[package]
name = "remote-trait-object"
version = "0.2.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A remote method invocation library based on trait objects"
repository = "https://github.com/CodeChain-io/remote-trait-object"
keywords = ["rmi", "protocol", "network", "server"]
categories = ["network-programming"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
crossbeam = "0.7.3"
log = "0.4.8"
parking_lot = "0.11.0"
threadpool = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
bincode = "1.3.1"
linkme = "0.2.1"
remote-trait-object-macro = { version = "=0.2.0", path = "../remote-trait-object-macro"}

[dev-dependencies]
env_logger = "0.7.1"
serde_json = "1.0"
